# datafiles

./: .appveyor.yml  .coveragerc  .gitignore  .isort.cfg  .mypy.ini  .pydocstyle.ini  .pylint.ini  .python-version  .tool-versions  .travis.yml  .verchew.ini  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: main.yml
datafiles/: __init__.py  builders.py  config.py  converters.py  decorators.py  fields.py  formats.py  hooks.py  manager.py  managers.py  mapper.py  mappers.py  meta.py  model.py  models.py  patches.py  plugins.py  settings.py  types.py  utils.py
datafiles/converters/: __init__.py  _bases.py  builtins.py  containers.py  enumerations.py  extensions.py
datafiles/tests/: __init__.py  conftest.py  test_builders.py  test_converters.py  test_decorators.py  test_fields.py  test_formats.py  test_generics.py  test_hooks.py  test_manager.py  test_managers.py  test_mapper.py  test_mappers.py  test_model.py  test_models.py  test_utils.py
docs/: formats.md  index.md  logging.md  orm.md  requirements.txt  settings.md  types.md  utilities.md
docs/api/: manager.md  mapper.md  model.md
docs/options/: decorators.md  formats.md  setup.md
docs/types/: builtins.md  containers.md  custom.md  extensions.md  generics.md
form/: .isort.cfg  __init__.py  decorators.py  fields.py  managers.py  models.py
notebooks/: .gitignore  file_inference.ipynb  format_options.ipynb  generic_types.ipynb  manager_api.ipynb  mapper_api.ipynb  nested_dataclass.ipynb  nested_values.ipynb  orm.ipynb  patched_containers.ipynb  readme.ipynb  roundtrip_comments.ipynb
notebooks/files/: format_options.json5
notebooks/profile_default/: ipython_config.py
notebooks/profile_default/startup/: samples.py
tests/: __init__.py  conftest.py  samples.py  test_auto.py  test_automatic_attributes.py  test_custom_converters.py  test_custom_converters_future.py  test_custom_formats.py  test_extended_converters.py  test_file_inference.py  test_form_init.py  test_generic_converters.py  test_init.py  test_instantiation.py  test_load.py  test_loading.py  test_orm.py  test_orm_usage.py  test_patched_methods.py  test_profile.py  test_profiling.py  test_save.py  test_saving.py  test_setup.py  test_sync.py  test_sync_none.py  test_types.py
yorm2/: __init__.py
