[tool.poetry]

name = "datafiles"
version = "2.2.2"
description = "File-based ORM for dataclasses."

license = "MIT"

authors = ["Jace Browning <jacebrowning@gmail.com>"]

readme = "README.md"

homepage = "https://pypi.org/project/datafiles"
documentation = "https://datafiles.readthedocs.io"
repository = "https://github.com/jacebrowning/datafiles"

keywords = [
    "dataclasses",
    "serialization",
    "type-annotations",
    "object-relational mapping",
    "YAML",
    "JSON",
    "TOML",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]

python = "^3.8"

# Formats
"ruamel.yaml" = "^0.17.21"
tomlkit = "^0.10.1"

# ORM
parse = "^1.12"

# Utilities
cached_property = "^1.5"
classproperties = "^0.2"
minilog = "^2.3"

[tool.poetry.dev-dependencies]

# Formatters
black = "^24.3"
isort = "^5.10"

# Linters
mypy = "^1.3"
pylint = "~2.15"
pydocstyle = "*"

# Testing
pytest = "^6.2.5"
pytest-describe = "^2.0"
pytest-expecter = "^3.0"
pytest-mock = "*"
pytest-random = "*"
pytest-repeat = "*"
pytest-watch = "*"
pytest-cov = "^2.8.1"
pytest-profiling = "*"

# Coverage
coveragespace = "^6.0"

# Documentation
mkdocs = "^1.4"
pygments = "^2.15"

# Notebooks
idna = "^3.3" # papermill dependency
ipython = "^8.10"
notebook = { version = "^7.2", markers = "os.name != 'nt'" }
nbstripout ="~0.4"
papermill = { version = "^2.3", markers = "os.name != 'nt'" }

[tool.black]

quiet = true

[tool.isort]

profile = "black"

[build-system]

requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"
